<resources>
    //Login
    <string name="app_name">Login</string>
    <string name="login_textview">Đăng nhập</string>
    <string name="username_edittext">Tài khoản</string>
    <string name="password_edittext">Mật khẩu</string>
    <string name="login_button_text">Đăng nhập</string>
    <string name="reg_button_text">Đăng ký</string>
    <string name="tentruyen">TÊN TRUYỆN</string>

    //Registry
    <string name="registry_textview">Đăng ký</string>
    <string name="username_edittext_reg">Nhập tên người dùng</string>
    <string name="password_edittext_reg">Nhập mật khẩu</string>
    <string name="password_edittext_reg1">Nhập lại mật khẩu</string>
    <string name="reg_button_xong_reg">Xong</string>
    <string name="reg_button_thoat_reg">Quay lại</string>


</resources>